# sfml-spine-test

./: .gitignore  .gitmodules  README.md
proj.linux/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
proj.linux/src/: main.cpp
res/: spineboy.atlas
src/: Application.cpp  Application.hpp
